--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anima-design-token-test",
+  "name": "andrico-design-token-test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
